--- a/3.Clustering/1.Hirerchial Clustering/hierarchical_clustering.ipynb
+++ b/3.Clustering/1.Hirerchial Clustering/hierarchical_clustering.ipynb
@@ -85,6 +85,24 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "A **dendrogram** is a tree-like diagram that visually represents how hierarchical clustering builds clusters step by step. It shows at what distance (or similarity) different clusters are merged.\n",
+        "\n",
+        " To get cluster size which size will be best for our model?\n",
+        "\n",
+        " **sch.dendrogram() →** Generates the dendrogram.\n",
+        "\n",
+        "**sch.linkage(X, method='ward')** provides the cluster linkage information.\n",
+        "\n",
+        "**Ward’s method** helps group similar data points together while keeping clusters balanced.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "VDHgqEDWKMZ4"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "RDQODpAFNILO",
@@ -121,12 +139,53 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Look for the longest vertical line between merges that does not intersect with any horizontal lines above it. for optimal clusters (knowing size of clusters for model )"
+      ],
+      "metadata": {
+        "id": "kVg_JLa3OStA"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "KDbXbo9INLF6"
       },
       "source": [
         "## Training the Hierarchical Clustering model on the dataset"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Understanding `affinity='euclidean'` in Hierarchical Clustering**\n",
+        "\n",
+        "When performing **Agglomerative Hierarchical Clustering**, the **affinity** parameter determines **how distances between points** are calculated to decide which clusters should merge.  \n",
+        "\n",
+        "### **What is Euclidean Distance?**\n",
+        "- **Euclidean distance** is the **straight-line (shortest) distance** between two points in space.\n",
+        "\n",
+        "\n",
+        "### **How Does This Affect Clustering?**\n",
+        "1. **Distance Calculation:**  \n",
+        "   - Each point’s similarity to other points is measured using **Euclidean distance**.\n",
+        "   - Points that are **closer together** are more likely to be merged into the same cluster.\n",
+        "\n",
+        "2. **Impact on Hierarchical Clustering:**  \n",
+        "   - At each step, the two **most similar clusters** (having the lowest Euclidean distance) are merged.\n",
+        "   - The **Ward’s method** (used in your code with `linkage='ward'`) ensures that these merges **minimize variance** within clusters.\n",
+        "   - This approach leads to **compact and well-defined clusters**.\n",
+        "\n",
+        "### **Alternative Distance Metrics (if affinity is changed)**\n",
+        "- **Manhattan (`'manhattan'`)** → Measures total absolute difference (great for grid-like data).  \n",
+        "- **Cosine (`'cosine'`)** → Measures angle-based similarity (useful for text or high-dimensional data).  \n",
+        "- **Precomputed (`'precomputed'`)** → Uses a custom distance matrix for specialized clustering scenarios.  \n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "yg3O7KfLQi2e"
+      }
     },
     {
       "cell_type": "code",
