--- a/3.Clustering/1.Hirerchial Clustering/Readme
+++ b/3.Clustering/1.Hirerchial Clustering/Readme
@@ -5,3 +5,49 @@
   - Divisive (top-down): Start with all data and split into smaller clusters
 - **Output**: Dendrogram (a tree diagram showing merges/splits)
 - **Good for**: Understanding data structure, when you don't know `K`
+
+
+📊 Hierarchical Clustering on Mall Customers Dataset
+🧠 Project Overview
+This project demonstrates the implementation of Hierarchical Clustering, an unsupervised machine learning algorithm, to segment 
+customers based on their Annual Income and Spending Score. The goal is to identify distinct customer groups for targeted 
+marketing strategies in a retail business.
+
+Using a dendrogram, we determine the optimal number of clusters and then apply Agglomerative Clustering to group customers with 
+similar behavior. The results are visualized for better interpretability.
+
+📁 Dataset Description: Mall_Customers.csv
+The dataset contains data about customers of a shopping mall. Each row represents a customer and includes the following features:
+
+Column Name	              Description
+CustomerID	      Unique ID assigned to each customer
+Gender	           Gender of the customer (Male/Female)
+Age	               Age of the customer
+Annual Income	     Annual income of the customer (in $1000s)
+Spending Score	    Score assigned by the mall based on customer behavior and spending nature (1–100)
+
+In this project, we only use:
+
+Annual Income (feature index 3)
+
+Spending Score (feature index 4)
+
+These two features help us discover meaningful patterns and segments among customers.
+
+🚀 Key Steps
+Data Preprocessing: Selecting relevant features (Annual Income, Spending Score)
+
+Dendrogram Visualization: To identify the optimal number of clusters
+
+Model Building: Applying Agglomerative Clustering
+
+Visualization: Plotting the clusters to show customer segments
+
+📌 Objective
+To help businesses:
+
+Understand customer behavior
+
+Improve marketing and recommendation strategies
+
+Personalize offerings to customer segments
