--- a/4.Association Rule Learning/0.Apriori/apriori.ipynb
+++ b/4.Association Rule Learning/0.Apriori/apriori.ipynb
@@ -87,6 +87,27 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Apriori expect particular format for dataset and unfortunately that format is not a pandas dataframe. it requires one by one full transactions list or movies watched list by one person.\n",
+        "\n",
+        "so now we make transaction array , and in that array we filled the data one by one  full row (full transaction by one person)\n",
+        "\n",
+        "**[str(dataset.values[i,j]) for j in range(0, 20)]**\n",
+        "\n",
+        " where i  = row , j = cols\n",
+        "\n",
+        " so we have 19 cols max in dataset thats why we take range (0,20)\n",
+        "\n",
+        " a certain **expectation of the future**, a primary function which we'll use to train our primary model, it is the fact that all the elements in the **list**\n",
+        "must be **strings.**\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "dFHmy67VpzBU"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "J_A-UFOAsaDf"
@@ -108,6 +129,32 @@
       "source": [
         "## Training the Apriori model on the dataset"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "**transactions**=transactions → Passes the list of transactions to Apriori.\n",
+        "\n",
+        "**min_support**=0.003 → Minimum support threshold (frequency of an itemset appearing in transactions).\n",
+        "\n",
+        "This means an item must be present in at least 0.3% of all transactions to be considered.\n",
+        "\n",
+        "**min_confidence**=0.2 → Minimum confidence threshold (how often a rule is correct).\n",
+        "\n",
+        "A rule is kept only if at least 20% of the time, when item X is bought, item Y is also bought.\n",
+        "\n",
+        "**min_lift**=3 → Minimum lift threshold (strength of the association).\n",
+        "\n",
+        "The rule must be at least 3 times more likely than random chance.\n",
+        "\n",
+        "**min_length**=2, **max_length=2** → Limits the size of itemsets to exactly two items.\n",
+        "\n",
+        "Ensures only pairwise product associations are found (e.g., “People who bought bread also bought butter”)."
+      ],
+      "metadata": {
+        "id": "4I1whnzutL7m"
+      }
     },
     {
       "cell_type": "code",
@@ -186,6 +233,84 @@
           "execution_count": 6
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "[RelationRecord(items=frozenset({'chicken', 'light cream'}), support=0.004532728969470737, ordered_statistics=[OrderedStatistic(items_base=frozenset({'light cream'}), items_add=frozenset({'chicken'}), confidence=0.29059829059829057, lift=4.84395061728395)])\n",
+        "\n",
+        "item_base is based item mean \"who bought light cream they also bought chicken\"\n",
+        "\n",
+        "in further steps we say **lhs** to item-base and **rhs** to items-add\n",
+        "\n",
+        "\n",
+        "Step 1: Extract Left-Hand Side (LHS)\n",
+        "\n",
+        "**lhs = [tuple(result[2][0][0])[0] for result in results]**\n",
+        "\n",
+        "result[2] → Accesses ordered_statistics.\n",
+        "\n",
+        "[0][0] → Gets the items_base (left-hand side of the rule).\n",
+        "\n",
+        "tuple(...) → Converts it into a tuple\n",
+        "\n",
+        "✅ Example Output: ('light cream',)\n",
+        "\n",
+        "tuple(...)[0] → extracts the first item which is name of lhs\n",
+        "\n",
+        "✅ Example Output: \"light cream\"\n",
+        "\n",
+        "Step 2: Extract Right-Hand Side (RHS)\n",
+        "\n",
+        "**rhs = [tuple(result[2][0][1])[0] for result in results]**\n",
+        "\n",
+        "Similar to LHS extraction, but gets items_add (right-hand side of the rule).\n",
+        "\n",
+        "✅ Example Output: \"chicken\"\n",
+        "\n",
+        "Step 3: Extract Support\n",
+        "\n",
+        "**supports = [result[1] for result in results]**\n",
+        "\n",
+        "result[1] → Directly gets the support value.\n",
+        "\n",
+        "✅ Example Output: 0.0045\n",
+        "\n",
+        "Step 4: Extract Confidence\n",
+        "\n",
+        "**confidences = [result[2][0][2] for result in results]**\n",
+        "\n",
+        "result[2][0][2] → Gets confidence value from ordered statistics.\n",
+        "\n",
+        "✅ Example Output: 0.2906\n",
+        "\n",
+        "Step 5: Extract Lift\n",
+        "\n",
+        "**lifts = [result[2][0][3] for result in results]**\n",
+        "\n",
+        "result[2][0][3] → Extracts lift value.\n",
+        "\n",
+        "✅ Example Output: 4.8439\n",
+        "\n",
+        "Step 6: Organizing into a DataFrame\n",
+        "\n",
+        "**return list(zip(lhs, rhs, supports, confidences, lifts))**\n",
+        "\n",
+        "**resultsinDataFrame = pd.DataFrame(inspect(results), columns = ['Left Hand Side', 'Right Hand Side', 'Support', 'Confidence', 'Lift'])**\n",
+        "\n",
+        "zip(lhs, rhs, supports, confidences, lifts) → Combines all extracted data into a structured list.\n",
+        "\n",
+        "pd.DataFrame(..., columns=['Left Hand Side', 'Right Hand Side', 'Support', 'Confidence', 'Lift']) → Formats the list into a readable table.\n",
+        "\n",
+        "✅ Example Output (DataFrame):\n",
+        "\n",
+        " |Left Hand Side | Right Hand Side | Support | Confidence | Lift|\n",
+        " |---------------|-----------------|---------|------------|-----|\n",
+        " |light cream    | chicken        | 0.0045   | 0.2906     | 4.84|  "
+      ],
+      "metadata": {
+        "id": "75WXSqqBu3jb"
+      }
     },
     {
       "cell_type": "markdown",
@@ -513,6 +638,31 @@
           "execution_count": 9
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Understanding the Columns (output)**\n",
+        "\n",
+        "Left Hand Side (LHS) → The base product in the association (the trigger).\n",
+        "\n",
+        "Right Hand Side (RHS) → The associated product (often bought together with LHS).\n",
+        "\n",
+        "Support → The **percentage of transactions** that contain both products.\n",
+        "\n",
+        "Example: 0.003333 means 0.33% of all transactions included fromage blanc and honey together.\n",
+        "\n",
+        "Confidence → The **probability** that when LHS is bought, RHS is bought too.\n",
+        "\n",
+        "Example: 0.245098 means 24.5% of customers who bought fromage blanc also bought honey.\n",
+        "\n",
+        "Lift → The **strength of the association** (higher is better).\n",
+        "\n",
+        "Example: 5.164271 means honey is 5.16 times more likely to be bought when fromage blanc is purchased, compared to random chance."
+      ],
+      "metadata": {
+        "id": "_TVD9niQ6Fts"
+      }
     }
   ]
 }
