--- a/4.Association Rule Learning/0.Apriori/apriori.ipynb
+++ b/4.Association Rule Learning/0.Apriori/apriori.ipynb
@@ -33,6 +33,108 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "## Apriori Algorithm\n",
+        "- **Goal**: Find frequent itemsets and generate association rules.\n",
+        "- **How it works**:\n",
+        "  - Step 1: Find itemsets that occur more than a minimum threshold (support).\n",
+        "  - Step 2: Generate rules with high confidence and lift.\n",
+        "- **Useful for**: Recommender systems, shopping cart analysis.\n",
+        "- **Example rule**: If a customer buys bread and butter → they are likely to buy milk.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "### 🔍 **What is Apriori?**\n",
+        "\n",
+        "Apriori is used in **Association Rule Learning** — finding patterns like:\n",
+        "\n",
+        "> \"People who bought X also bought Y.\"\n",
+        "\n",
+        "\n",
+        "### 🔧 **Three Key Concepts in Apriori**\n",
+        "\n",
+        "#### 1. ✅ **Support**\n",
+        "\n",
+        "* Definition:\n",
+        "\n",
+        " Support(A)=\n",
+        "\n",
+        "       Total number of transactions / Number of transactions containing item A\n",
+        "\n",
+        "\n",
+        "* Tells how **frequent** an item or itemset is in the data.\n",
+        "* Example:\n",
+        "\n",
+        "  * 10 people watched \"Ex Machina\" out of 100.\n",
+        "    → **Support** = 10%\n",
+        "\n",
+        "---\n",
+        "\n",
+        "#### 2. 💬 **Confidence**\n",
+        "\n",
+        "* Definition:\n",
+        "\n",
+        "Confidence(A⇒B)=\n",
+        "\n",
+        "          Transactions containing A / Transactions containing both A and B\n",
+        "​\n",
+        "\n",
+        "* Measures how often **B is purchased when A is purchased**.\n",
+        "* Example:\n",
+        "\n",
+        "  * 40 watched \"Interstellar\", 7 of them also watched \"Ex Machina\".\n",
+        "  \n",
+        "\n",
+        "→ Confidence =\n",
+        "7 / 40 = 17.5%\n",
+        "\n",
+        "---\n",
+        "\n",
+        "#### 3. 🚀 **Lift**\n",
+        "\n",
+        "* Definition:\n",
+        "\n",
+        "\n",
+        "Lift(A⇒B)=  \n",
+        "\n",
+        "             Support(B) / Confidence(A⇒B)\n",
+        "​\n",
+        "\n",
+        "\n",
+        "* **Lift** measures **how much stronger** a relationship exists between two items compared to random chance.\n",
+        "\n",
+        "### When Lift > 1:\n",
+        "- It means **A & B are strongly connected**.\n",
+        "- Buying **A** makes buying **B** more likely.\n",
+        "\n",
+        "- Example:\n",
+        "  - **Support:** *10%* of people bought **\"Ex Machina\"** (**Support = 10%**).\n",
+        "  - **Confidence:** *17.5%* of people who bought **\"Interstellar\"** also bought **\"Ex Machina\"** (**Confidence = 17.5%**).\n",
+        "\n",
+        "### **Key Insight:**\n",
+        "- If **Lift is high**, it means **\"Interstellar\" buyers are much more likely** to buy **\"Ex Machina\"** than expected by chance.\n",
+        "\n",
+        "\n",
+        "  \n",
+        "\n",
+        " → Lift = 17.5 %  / 10 % = 1.75\n",
+        "\n",
+        "---\n",
+        "\n",
+        "### 🧾 **Step-by-Step Process**\n",
+        "\n",
+        "1. **Define min support, confidence, and lift thresholds.**\n",
+        "2. **Find all frequent itemsets** using support.\n",
+        "3. **Generate association rules** from those itemsets.\n",
+        "4. **Filter rules** using confidence and lift."
+      ],
+      "metadata": {
+        "id": "QIDYamFc7JaO"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "eiNwni1xsEgT"
       },
