--- a/4.Association Rule Learning/0.Apriori/Readme
+++ b/4.Association Rule Learning/0.Apriori/Readme
@@ -7,7 +7,10 @@
 - **Example rule**: If a customer buys bread and butter → they are likely to buy milk.
 
 🛒 Association Rule Learning – Market Basket Analysis
-This project demonstrates Association Rule Learning using the Apriori algorithm to uncover interesting relationships between items in customer transactions. It's based on a classic Market Basket Optimization scenario, where the goal is to identify product combinations frequently purchased together. These insights can be used to design effective marketing strategies like "Buy X, Get Y Free" or product recommendations similar to "Customers who bought this also bought...".
+This project demonstrates Association Rule Learning using the Apriori algorithm to uncover interesting relationships between 
+items in customer transactions. It's based on a classic Market Basket Optimization scenario, where the goal is to identify product
+combinations frequently purchased together. These insights can be used to design effective marketing strategies like "Buy X, 
+Get Y Free" or product recommendations similar to "Customers who bought this also bought...".
 
 📈 Objective
 The primary goal of this project is to:
@@ -16,7 +19,8 @@ Apply the Apriori algorithm to discover strong association rules from transactio
 
 Use metrics like Support, Confidence, and Lift to evaluate the strength and relevance of the discovered rules.
 
-Identify the most influential product combinations that can help a business improve sales, customer satisfaction, and cross-selling opportunities.
+Identify the most influential product combinations that can help a business improve sales, customer satisfaction, and
+cross-selling opportunities.
 
 📦 Dataset – Market_Basket_Optimisation.csv
 The dataset contains 7,500 customer transactions collected over a one-week period from a small grocery store in the South of France.
@@ -29,14 +33,13 @@ The data is unstructured, with varying numbers of products per transaction and s
 
 Example Rows:
 
-python-repl
-Copy
-Edit
+
 Shrimp, Almonds, Avocado, Vegetable mix, Green grapes, Whole wheat pasta, Olive oil  
 Burgers, Meatballs, Eggs  
 Chutney  
 Turkey, Avocado, Tomatoes, Lettuce
 ...
+
 🧠 Techniques Used
 Apriori Algorithm for rule mining
 
@@ -51,9 +54,6 @@ Jupyter Notebook / Google Colab for interactive development
 📊 Output
 A list of discovered association rules, such as:
 
-yaml
-Copy
-Edit
 Rule: {milk, bread} → {butter}
 Support: 0.05 | Confidence: 0.6 | Lift: 1.5
 Sorted by descending lift to highlight the most impactful rules first.
