--- a/5.Reinforcement Learning/1.Upper Confidence Bound(UCB)/upper_confidence_bound.ipynb
+++ b/5.Reinforcement Learning/1.Upper Confidence Bound(UCB)/upper_confidence_bound.ipynb
@@ -88,31 +88,42 @@
         "id": "V1K7jgDFwkRd"
       },
       "source": [
-        "import math\n",
-        "N = 10000\n",
-        "d = 10\n",
-        "ads_selected = []\n",
-        "numbers_of_selections = [0] * d\n",
-        "sums_of_rewards = [0] * d\n",
-        "total_reward = 0\n",
+        "import math  # Import the math library for logarithm and square root operations\n",
+        "\n",
+        "N = 10000  # Total number of rounds (users interacting with ads)\n",
+        "d = 10  # Number of ads available\n",
+        "ads_selected = []  # List to store the ads selected in each round\n",
+        "numbers_of_selections = [0] * d  # Tracks how many times each ad was selected\n",
+        "sums_of_rewards = [0] * d  # Stores cumulative rewards for each ad\n",
+        "total_reward = 0  # Keeps track of total rewards gained\n",
+        "\n",
+        "# Loop through each round (user interaction)\n",
         "for n in range(0, N):\n",
-        "  ad = 0\n",
-        "  max_upper_bound = 0\n",
-        "  for i in range(0, d):\n",
-        "    if (numbers_of_selections[i] > 0):\n",
-        "      average_reward = sums_of_rewards[i] / numbers_of_selections[i]\n",
-        "      delta_i = math.sqrt(3/2 * math.log(n + 1) / numbers_of_selections[i])\n",
-        "      upper_bound = average_reward + delta_i\n",
-        "    else:\n",
-        "      upper_bound = 1e400\n",
-        "    if (upper_bound > max_upper_bound):\n",
-        "      max_upper_bound = upper_bound\n",
-        "      ad = i\n",
-        "  ads_selected.append(ad)\n",
-        "  numbers_of_selections[ad] = numbers_of_selections[ad] + 1\n",
-        "  reward = dataset.values[n, ad]\n",
-        "  sums_of_rewards[ad] = sums_of_rewards[ad] + reward\n",
-        "  total_reward = total_reward + reward"
+        "    ad = 0  # Variable to store the chosen ad\n",
+        "    max_upper_bound = 0  # Maximum Upper Confidence Bound (UCB) to pick the best ad\n",
+        "\n",
+        "    # Loop through all ads to calculate UCB and select the highest one\n",
+        "    for i in range(0, d):\n",
+        "        if numbers_of_selections[i] > 0:  # If the ad has been selected before\n",
+        "            average_reward = sums_of_rewards[i] / numbers_of_selections[i]  # Compute average reward of the ad\n",
+        "            delta_i = math.sqrt(3/2 * math.log(n + 1) / numbers_of_selections[i])  # Compute confidence interval (exploration factor)\n",
+        "            upper_bound = average_reward + delta_i  # Compute UCB value\n",
+        "        else:\n",
+        "            upper_bound = 1e400  # Assign a very high value to ensure that every ad is tested at least once\n",
+        "\n",
+        "        # Select the ad with the highest UCB value\n",
+        "        if upper_bound > max_upper_bound:\n",
+        "            max_upper_bound = upper_bound\n",
+        "            ad = i  # Update the selected ad\n",
+        "\n",
+        "    ads_selected.append(ad)  # Store the chosen ad for this round\n",
+        "    numbers_of_selections[ad] += 1  # Increase count of times the ad was selected\n",
+        "    reward = dataset.values[n, ad]  # Get the reward from the dataset\n",
+        "    sums_of_rewards[ad] += reward  # Update the cumulative reward for the selected ad\n",
+        "    total_reward += reward  # Update total reward across all rounds\n",
+        "\n",
+        "print(total_reward)\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
