--- a/5.Reinforcement Learning/1.Upper Confidence Bound(UCB)/upper_confidence_bound.ipynb
+++ b/5.Reinforcement Learning/1.Upper Confidence Bound(UCB)/upper_confidence_bound.ipynb
@@ -83,6 +83,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "1.Tracks 10 ads over 10,000 rounds to decide which ad performs best.\n",
+        "\n",
+        "2.Initially, every ad is given a chance.\n",
+        "\n",
+        "3.Later, ads are selected based on how successful they were.\n",
+        "\n",
+        "4.The Upper Confidence Bound (UCB) formula helps balance exploration (trying new ads) and exploitation (choosing the best ads).\n",
+        "\n",
+        "5.The algorithm learns which ad gets the most engagement over time"
+      ],
+      "metadata": {
+        "id": "5DtvClNzMcgg"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "V1K7jgDFwkRd"
