--- a/5.Reinforcement Learning/2.Thompson Sampling/thompson_sampling.ipynb
+++ b/5.Reinforcement Learning/2.Thompson Sampling/thompson_sampling.ipynb
@@ -83,33 +83,66 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "1.Tracks 10 ads over 10,000 rounds to learn which ad performs best.\n",
+        "\n",
+        "2.Uses Thompson Sampling, which picks ads randomly but intelligently:\n",
+        "\n",
+        "- Ads with better rewards are more likely to be selected.\n",
+        "\n",
+        "- Ads with less data get some exploration chance.\n",
+        "\n",
+        "Random Beta values help balance exploration & exploitation.\n",
+        "\n",
+        "The algorithm improves ad selection dynamically based on success rates."
+      ],
+      "metadata": {
+        "id": "TgurBAELNEBb"
+      }
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "PCiHv51pyUII"
       },
       "source": [
-        "import random\n",
-        "N = 10000\n",
-        "d = 10\n",
-        "ads_selected = []\n",
-        "numbers_of_rewards_1 = [0] * d\n",
-        "numbers_of_rewards_0 = [0] * d\n",
-        "total_reward = 0\n",
+        "import random  # Import the random library for generating Beta-distributed values\n",
+        "\n",
+        "N = 10000  # Total number of rounds (users interacting with ads)\n",
+        "d = 10  # Number of different ads\n",
+        "ads_selected = []  # List to store the ads selected in each round\n",
+        "numbers_of_rewards_1 = [0] * d  # Stores the number of times an ad received reward = 1\n",
+        "numbers_of_rewards_0 = [0] * d  # Stores the number of times an ad received reward = 0\n",
+        "total_reward = 0  # Keeps track of total rewards accumulated\n",
+        "\n",
+        "# Loop through each round (user interaction)\n",
         "for n in range(0, N):\n",
-        "  ad = 0\n",
-        "  max_random = 0\n",
-        "  for i in range(0, d):\n",
-        "    random_beta = random.betavariate(numbers_of_rewards_1[i] + 1, numbers_of_rewards_0[i] + 1)\n",
-        "    if (random_beta > max_random):\n",
-        "      max_random = random_beta\n",
-        "      ad = i\n",
-        "  ads_selected.append(ad)\n",
-        "  reward = dataset.values[n, ad]\n",
-        "  if reward == 1:\n",
-        "    numbers_of_rewards_1[ad] = numbers_of_rewards_1[ad] + 1\n",
-        "  else:\n",
-        "    numbers_of_rewards_0[ad] = numbers_of_rewards_0[ad] + 1\n",
-        "  total_reward = total_reward + reward"
+        "    ad = 0  # Variable to store the chosen ad\n",
+        "    max_random = 0  # Maximum randomly drawn Beta value for ad selection\n",
+        "\n",
+        "    # Loop through all ads to calculate Beta values and select the best one\n",
+        "    for i in range(0, d):\n",
+        "        # Generate a random Beta value based on past rewards\n",
+        "        random_beta = random.betavariate(numbers_of_rewards_1[i] + 1, numbers_of_rewards_0[i] + 1)\n",
+        "\n",
+        "        # Select the ad with the highest Beta value (most promising ad)\n",
+        "        if random_beta > max_random:\n",
+        "            max_random = random_beta\n",
+        "            ad = i  # Update the selected ad\n",
+        "\n",
+        "    ads_selected.append(ad)  # Store the chosen ad for this round\n",
+        "\n",
+        "    # Get the reward from the dataset\n",
+        "    reward = dataset.values[n, ad]\n",
+        "\n",
+        "    # Update reward counters based on whether the ad was successful\n",
+        "    if reward == 1:\n",
+        "        numbers_of_rewards_1[ad] += 1  # Increase count of successful selections\n",
+        "    else:\n",
+        "        numbers_of_rewards_0[ad] += 1  # Increase count of unsuccessful selections\n",
+        "\n",
+        "    total_reward += reward  # Update total reward across all rounds\n"
       ],
       "execution_count": null,
       "outputs": []
