--- a/5.Reinforcement Learning/2.Thompson Sampling/thompson_sampling.ipynb
+++ b/5.Reinforcement Learning/2.Thompson Sampling/thompson_sampling.ipynb
@@ -85,20 +85,29 @@
     {
       "cell_type": "markdown",
       "source": [
-        "1.Tracks 10 ads over 10,000 rounds to learn which ad performs best.\n",
         "\n",
-        "2.Uses Thompson Sampling, which picks ads randomly but intelligently:\n",
+        "### 🔄 The Learning Loop in Thompson Sampling\n",
         "\n",
-        "- Ads with better rewards are more likely to be selected.\n",
+        "1. **Initialization**: Each arm (e.g., each ad or machine) starts with a *prior* Beta distribution. If we model the rewards as binary (0/1), the Beta distribution is the conjugate prior of the Bernoulli distribution — perfect for updating with binary outcomes.\n",
         "\n",
-        "- Ads with less data get some exploration chance.\n",
+        "   * Usually initialized as `Beta(1, 1)` for each arm (uniform distribution).\n",
         "\n",
-        "Random Beta values help balance exploration & exploitation.\n",
+        "2. **Sampling**: For each round:\n",
         "\n",
-        "The algorithm improves ad selection dynamically based on success rates."
+        "   * You sample a value from each arm's current Beta distribution.\n",
+        "   * The arm with the highest sampled value is chosen (i.e., you \"pull that arm\").\n",
+        "\n",
+        "3. **Update**:\n",
+        "\n",
+        "   * If the chosen arm gives a reward of 1 (e.g., the ad was clicked), increment the `success` count (`α` in Beta(α, β)).\n",
+        "   * If the reward is 0, increment the `failure` count (`β`).\n",
+        "\n",
+        "4. **Repeat**: With more data, each arm’s Beta distribution gets sharper and more accurate. The algorithm continues sampling and updating over time, naturally balancing **exploration** (trying different arms) and **exploitation** (sticking to the best one).\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "TgurBAELNEBb"
+        "id": "r-wZeoJoNsQu"
       }
     },
     {
